fixed marquee to not mess up on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   scroll-behavior: smooth;
-  overscroll-behavior-y: none;
+  overflow-y: scroll;
   overflow-x: hidden;
   font-family: AlwaysForever, sans-serif;
   font-weight: 900;
@@ -39,21 +39,21 @@ section {
 }
 
 .pic-outer {
-  overflow: hidden;
+  overflow-x: hidden;
+  padding: 3% 0;
   width: 100%;
+  background: $light-accent;
+  height: 124px;
+  box-shadow: 0px 2px 10px gray;
 }
 
 .picholder {
-  background: $light-accent;
-  padding: 3% 0;
-  display: block;
   width: 200%;
-  position: absolute;
+  position: relative;
   animation: marquee 5s linear infinite;
   &:hover {
     animation-play-state: paused;
   }
-  box-shadow: 0px 2px 10px gray;
 }
 
 span {
@@ -75,10 +75,4 @@ span div {
 @keyframes marquee {
   0% { left: -100%; }
   100% { left: 0%; }
-}
-
-@media only screen and (max-width: 768px) {
-  html {
-  position: fixed;
-}
 }
